# gx-rag

./: .env.template  .gitignore  README.md  main.py  pyproject.toml
front_app/: holmes_ui.py
src/: test.py
src/apps/persona/: api.py  holmes.ipynb  holmes.py
src/apps/persona/chains/: chains.py
src/apps/persona/data/source/: holmes_01.txt  holmes_02.txt  holmes_07.txt  holmes_08.txt  homes_03.txt
src/apps/persona/database/: database.py
src/apps/persona/memory/: memory.py
src/apps/persona/prompts/: default_response.txt  intent_list.txt  parse_intent.txt  summary.txt
src/apps/persona/tools/: web_search.py
src/apps/sample_chat/: api.ipynb  api.py
src/apps/sample_chat/chains/: chains.py
src/apps/sample_chat/database/: database.py
src/apps/sample_chat/database/database/chroma-persist/: chroma.sqlite3
src/apps/sample_chat/memory/: memory.py
src/apps/sample_chat/tools/: web_search.py
src/apps/skqa/: README.md  install_elasticsearch.sh  rag_with_elasticsearch.ipynb  rag_with_elasticsearch.py  requirements.txt  sample_submission.csv  sample_submission.csv.bak  skqa_make_answer.ipynb  skqa_make_answer_rerank.ipynb  skqa_make_answer_rerank_post.ipynb  skqa_make_answer_rerank_pre.ipynb  skqa_make_list.ipynb  skqa_make_summary.ipynb  skqa_test.ipynb  test.ipynb
src/apps/skqa/data/: eval.jsonl  sample_submission.csv  sample_submission_01.csv
